[tool.poetry]
name = "myelin"
version = "2024"
description = "A Neural Network from scratch."
authors = ["Timothy <timothy@makobu.name>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.0"
scipy = "^1.14.0"
plotly = "^5.22.0"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
pdoc = "^14.5.1"
pytest-cov = "^5.0.0"
pytest-xdist = { extras = ["psutil"], version = "^3.6.1" }


[tool.poetry.group.lab.dependencies]
jupyterlab = "^4.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
